--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://localhost/studije
+spring.datasource.url=jdbc:mariadb://localhost/
 spring.datasource.username=root
 spring.datasource.password=""
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
