Fixed a bug on login page, added main app class to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Custom ###
+/src/main/java/poopprojekat/studentska_sluzba/StudentskaSluzbaApplication.java
